@@ -1,4 +1,3 @@
-// File: src/main/java/com/flightapp/security/JwtAuthenticationFilter.java
 package com.flightapp.security;
 
 import jakarta.servlet.FilterChain;
@@ -16,7 +15,6 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
     private final JwtUtils jwtUtils;
@@ -40,7 +38,7 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
                 List<SimpleGrantedAuthority> authorities = roles.stream()
                         .map(SimpleGrantedAuthority::new)
-                        .collect(Collectors.toList());
+                        .toList();
 
                 // If no roles in token, check headers forwarded by gateway
                 if (authorities.isEmpty()) {
@@ -50,7 +48,7 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                                 .map(String::trim)
                                 .filter(s -> !s.isEmpty())
                                 .map(SimpleGrantedAuthority::new)
-                                .collect(Collectors.toList());
+                                .toList();
                     }
                 }
 
